syntax = "proto3";

package media.v1;

option go_package = "sabitou/proto/media/v1;mediaV1";

service MediaService {
  rpc CreateMedia(CreateMediaRequest) returns (CreateMediaResponse);
  rpc GetMedia(GetMediaRequest) returns (GetMediaResponse);
  rpc UpdateMedia(UpdateMediaRequest) returns (UpdateMediaResponse);
  rpc DeleteMedia(DeleteMediaRequest) returns (DeleteMediaResponse);
}

enum MediaType {
  MEDIA_TYPE_UNSPECIFIED = 0;
  MEDIA_TYPE_IMAGE = 1;
  MEDIA_TYPE_VIDEO = 2;
}

message Media {
  string id = 1;
  string type = 2;
  string link = 3;
  string created_at = 4;
  string updated_at = 5;
}

message CreateMediaRequest {
  Media media = 1;
}

message CreateMediaResponse {
  string id = 1;
}

message GetMediaRequest {
  string id = 1;
}

message GetMediaResponse {
  Media media = 1;
}

message UpdateMediaRequest {
  Media media = 1;
}

message UpdateMediaResponse {
  Media media = 1;
}

message DeleteMediaRequest {
  string id = 1;
}

message DeleteMediaResponse {
  bool success = 1;
}
